# Materialize-CLI

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_PT.md  install.bat  install.ps1  install.sh
.cursor/rules/: materialize-cli.mdc
.cursor/skills/materialize-cli/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: 2026-03-15-materialize-cli-design.md  README.md  README_PT.md  algorithms.md  architecture.md  cli-api.md  features.md  roadmap.md  shaders.md
docs/plans/: 2026-03-15-cli-for-ai-agents-design.md  2026-03-15-materialize-cli-implementation.md  2026-03-15-materialize-cli-improvements-design.md
examples/: create_fixture.rs
installer/: installer.py
src/: cli.rs  gpu.rs  io.rs  main.rs  pipeline.rs  skill_install.rs
src/shaders/: ao.wgsl  edge.wgsl  height.wgsl  metallic.wgsl  normal.wgsl  smoothness.wgsl
tests/: integration_test.rs
