[package]
name = "materialize-cli"
version = "1.0.0"
edition = "2021"
description = "Generate PBR maps from diffuse textures"
license = "MIT"

[dependencies]
wgpu = "0.19"
tokio = { version = "1.0", features = ["full"] }
pollster = "0.3"
futures = "0.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "tga", "exr"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
